<resources>
    <string name="app_name">UtaMaps</string>
    <string name="title_activity_mapa_general">MapaGeneral</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_deptos">Departamentos</string>
    <string name="menu_slideshow">Contactos</string>
    <string name="menu_aularios">Aularios</string>
    <string name="menu_facultades">Facultades</string>
    <string name="menu_administrativo">Administrativo</string>
    <string name="menu_anexos">Anexos</string>
</resources>
