<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.utamaps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.utamaps.ui.gallery.GalleryFragment"
        android:label="@string/menu_deptos"
        tools:layout="@layout/fragment_deptos" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.utamaps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_aularios"
        android:name="com.example.utamaps.ui.aularios.AulariosFragment"
        android:label="@string/menu_aularios"
        tools:layout="@layout/fragment_aularios" />
    <fragment
        android:id="@+id/nav_facultades"
        android:name="com.example.utamaps.ui.facultades.FacultadesFragment"
        android:label="@string/menu_facultades"
        tools:layout="@layout/fragment_facultades" />
    <fragment
        android:id="@+id/nav_administrativo"
        android:name="com.example.utamaps.ui.administrativo.AdministrativoFragment"
        android:label="@string/menu_administrativo"
        tools:layout="@layout/fragment_administrativo" />
    <fragment
        android:id="@+id/nav_anexos"
        android:name="com.example.utamaps.ui.anexos.AnexoFragment"
        android:label="@string/menu_anexos"
        tools:layout="@layout/fragment_anexos" />


</navigation>